[project]
name = "hello_ai_agents"
version = "0.1.0"
description = "hello-ai-agents using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
hello_ai_agents = "hello_ai_agents.main:run"
run_crew = "hello_ai_agents.main:run"
train = "hello_ai_agents.main:train"
replay = "hello_ai_agents.main:replay"
test = "hello_ai_agents.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
